--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     ]
   },
   "dependencies": {
+    "@trussle/tricorder": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "http-status-codes": "^1.3.0",
