--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://github.com/timreynolds/typescript-express-starter",
   "scripts": {
-    "start": "npm run build && ./bin/www",
+    "start": "npm run build && node ./bin/www",
     "dev": "ts-node-dev ./bin/www",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
+    "@types/helmet": "0.0.38",
     "@types/jest": "23.1.0",
     "@types/knex": "^0.14.14",
     "@types/node": "10.3.3",
@@ -73,6 +74,7 @@
     "@timreynolds/cqs": "1.0.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "helmet": "^3.12.1",
     "http-status-codes": "^1.3.0",
     "knex": "^0.14.6",
     "pg": "^7.4.3"
