Added --env=node to jest command

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "dev": "ts-node-dev ./bin/www",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
-    "test": "jest --forceExit",
-    "test:unit": "jest ./src/",
-    "test:integration": "jest --forceExit ./integration/",
-    "test:coverage": "jest --forceExit --coverage",
+    "test": "jest --env=node --forceExit",
+    "test:unit": "jest --env=node ./src/",
+    "test:integration": "jest --env=node --forceExit ./integration/",
+    "test:coverage": "jest --env=node --forceExit --coverage",
     "lint": "tslint 'src/**/*.ts'",
     "prettier": "prettier --parser typescript --write '**/*.ts'",
     "precommit": "lint-staged",
