--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/knex": "0.16.1",
     "@types/node": "12.0.4",
     "@types/superagent": "4.1.1",
+    "@types/supertest": "^2.0.7",
     "husky": "2.3.0",
     "jest": "24.8.0",
     "lint-staged": "8.1.7",
